// protos/v1/user/user.proto
//protoc -I . --go_out . --go_opt paths=source_relative --go-grpc_out . --go-grpc_opt paths=source_relative protos/v1/common/common.proto


syntax = "proto3";

package v1.common;

option go_package = "github.com/sy-yoon/krealtors/protos/v1/common";

message ListParameters {
    int32 skip = 1;
    int32 limit = 2;
    string order_by = 3;
}

message Images {
    string image = 1;
}

message GeoLocation {
    double lat = 1;
    double lng = 2;
}
